[gd_scene load_steps=11 format=3 uid="uid://b4by48scsegxa"]

[ext_resource type="Script" path="res://scripts/flea.gd" id="1_41r4s"]
[ext_resource type="Texture2D" uid="uid://bqq7v3yi7nbon" path="res://asserts/flea.png" id="2_df7or"]
[ext_resource type="Texture2D" uid="uid://c4248o2cdfogp" path="res://asserts/cat.png" id="3_k72yv"]
[ext_resource type="Script" path="res://scripts/cat.gd" id="3_sytse"]
[ext_resource type="Script" path="res://scripts/mount_manager.gd" id="5_eit62"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcyi8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48vf2"]
size = Vector2(60, 27.19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_330b0"]
size = Vector2(1000, 95)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_iat5e"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_r5syw"]
noise = SubResource("FastNoiseLite_iat5e")

[node name="Node2D" type="Node2D"]

[node name="Flea" type="CharacterBody2D" parent="."]
position = Vector2(20, 8.525)
script = ExtResource("1_41r4s")

[node name="Flea" type="Sprite2D" parent="Flea"]
texture = ExtResource("2_df7or")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flea"]
shape = SubResource("RectangleShape2D_rcyi8")

[node name="Cat" type="CharacterBody2D" parent="."]
position = Vector2(300, 300.19)
script = ExtResource("3_sytse")

[node name="Cat" type="Sprite2D" parent="Cat"]
texture_filter = 2
scale = Vector2(3, 3)
texture = ExtResource("3_k72yv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cat"]
polygon = PackedVector2Array(-74, -27.19, -85, -18.19, -98, -29.19, -95, -49.19, -61, -58.19, -43, -42.19, -39, -13.19, -42, 5.81, -4, -8.19, 38, 2.81, 38, -14.19, 55, -11.19, 66, -14.19, 80, 11.81, 79, 29.81, 48, 36.81, 35, 69.81, 15, 70.81, 19, 48.81, -18, 44.81, -18, 67.81, -42, 72.81, -48, 52.81, -55, 33.81, -66, 17.81, -64, -19.19, -72, -37.19)

[node name="MountArea" type="Area2D" parent="Cat"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cat/MountArea"]
position = Vector2(5, -5.19)
shape = SubResource("RectangleShape2D_48vf2")

[node name="MountAnchor" type="Node2D" parent="Cat"]
position = Vector2(25, -12)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(320, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0, 37.5)
shape = SubResource("RectangleShape2D_330b0")

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
position = Vector2(1.00002, 37.5)
scale = Vector2(1.95703, 0.189453)
texture = SubResource("NoiseTexture2D_r5syw")

[node name="MountManager" type="Node2D" parent="."]
script = ExtResource("5_eit62")

[connection signal="body_shape_entered" from="Cat/MountArea" to="Cat" method="_on_mount_point_body_shape_entered"]
